some frontend cleanup around styling

--- a/part3/mfe-payments/src/app/components/table-overview/table-overview.component.html
+++ b/part3/mfe-payments/src/app/components/table-overview/table-overview.component.html
@@ -79,7 +79,7 @@
             <mat-icon [matMenuTriggerFor]="menu" class="more-info"
               >more_vert</mat-icon
             >
-            <mat-menu #menu="matMenu">
+            <mat-menu #menu="matMenu" class="menu-section">
               <button mat-menu-item (click)="deletePayment(row)">Delete</button>
               <button mat-menu-item (click)="openDetails(row)">
                 Open details
