--- a/part3/mfe-payments/src/app/components/table-overview/table-overview.component.scss
+++ b/part3/mfe-payments/src/app/components/table-overview/table-overview.component.scss
@@ -54,7 +54,17 @@
 
     .mat-column-actions {
       flex: none;
-      width: 3rem;
+      width: 4rem;
     }
+
+    .menu-section {
+      cursor: pointer;
+    }
+  }
+}
+
+@media only screen and (max-width: 350px) {
+  .table-container {
+    width: auto;
   }
 }
