--- a/part3/mfe-payments/src/app/components/table-overview/table-overview.component.scss
+++ b/part3/mfe-payments/src/app/components/table-overview/table-overview.component.scss
@@ -63,8 +63,17 @@
   }
 }
 
-@media only screen and (max-width: 350px) {
+@media only screen and (max-width: 480px) {
   .table-container {
     width: auto;
+  }
+
+  .filter-and-create-section {
+    padding: 1rem;
+    .filter-section {
+      .mat-form-field-type-mat-input {
+        min-width: 14rem !important;
+      }
+    }
   }
 }
