--- a/part3/mfe-payments/src/app/components/table-overview/table-overview.component.scss
+++ b/part3/mfe-payments/src/app/components/table-overview/table-overview.component.scss
@@ -86,8 +86,8 @@
   }
 }
 
-@media only screen and (min-width: 480px) and (orientation: landscape) {
+@media screen and (orientation: landscape) {
   .table-container {
-    background-color: lightblue;
+    width: auto !important;
   }
 }
