--- a/part3/mfe-payments/src/app/components/payment-details/payment-details.component.scss
+++ b/part3/mfe-payments/src/app/components/payment-details/payment-details.component.scss
@@ -2,8 +2,22 @@
   .title {
     font-weight: bold;
   }
-  min-width: 25rem;
-  .mat-grid-tile figure {
-    justify-content: initial;
+  min-width: 16rem;
+
+  .table {
+    .row {
+      display: flex;
+      justify-content: space-between;
+      width: 16rem;
+
+      .header {
+        font-weight: bold;
+        padding: 0.2rem 0;
+      }
+
+      .value {
+        padding: 0.2rem 0;
+      }
+    }
   }
 }
