fix mobile view

--- a/part3/mfe-payments/src/app/components/table-overview/table-overview.component.html
+++ b/part3/mfe-payments/src/app/components/table-overview/table-overview.component.html
@@ -63,7 +63,7 @@
             Due Date
           </mat-header-cell>
           <mat-cell *matCellDef="let row">
-            {{ row.dueDate | date: "medium" }}
+            {{ row.dueDate | date: "shortDate" }}
           </mat-cell>
         </ng-container>
 
