--- a/part4/mfe-accounts/src/app/accounts-list/accounts-list.component.html
+++ b/part4/mfe-accounts/src/app/accounts-list/accounts-list.component.html
@@ -1,5 +1,5 @@
 <mat-spinner *ngIf="isLoading"></mat-spinner>
-<section *ngIf="!isLoading">
+<section *ngIf="!isLoading" class="tree-container">
   <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
     <!-- This is the tree node template for leaf nodes -->
     <mat-tree-node *matTreeNodeDef="let node" matTreeNodePadding>
